--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,9 +9,20 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Liste Candidats</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+      <ion-item>
+        <ion-label><h1>Nom</h1></ion-label>
+        <ion-label><h1>Prenom</h1></ion-label>
+        <ion-label><h1>Lieu</h1></ion-label>
+        <ion-label><h1>Date</h1></ion-label>
+      </ion-item>
+
+      <ion-item *ngFor="let item of items | async">
+        <ion-label><h3>{{ item.nom }}</h3></ion-label>
+        <ion-label><h3>{{ item.prenom }}</h3></ion-label>
+        <ion-label><h3>{{ item.lieu }}</h3></ion-label>
+        <ion-label><h3>{{ item.date}}</h3></ion-label>
+      </ion-item>
