--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Connexion
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,29 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Connexion</ion-title>
     </ion-toolbar>
   </ion-header>
+<br>
+  <ion-item >
+    <ion-label color="light">Mail</ion-label>
+    <ion-input color="light" type="email" [(ngModel)]="dataUser.email" placeholder="Adresse mail"></ion-input>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label color="light">Mot de passe</ion-label>
+    <ion-input color="light" type="password" [(ngModel)]="dataUser.password" placeholder="Mot de passe"></ion-input>
+  </ion-item>
+<br>
+  <ion-button expand="block" shape="round" (click)="login()">Connexion</ion-button>
+  <ion-button expand="block" shape="round" (click)="logout()">Déconnexion</ion-button>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+      <div *ngIf="!connected">
+
+      </div>
+
+      <div *ngIf="connected">
+
+      </div>
+
 </ion-content>
